# ollie

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  requirements.txt
backend/app/: auth.py  db.py  main.py
backend/app/llm/: router.py
backend/app/llm/providers/: anthropic_provider.py  groq_provider.py  openai_provider.py
backend/app/queue/: rabbitmq.py
backend/app/redaction/: pii.py
backend/app/routes/: chat.py  ingest.py
backend/supabase/: schema.sql
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  styles.css
frontend/src/components/: AuthPage.jsx  ChatWindow.jsx  ConversationList.jsx
sdk/: pyproject.toml
sdk/ollie_sdk/: __init__.py  client.py
sdk/ollie_sdk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
